syntax = "proto2";
package video_streaming;

import "misc/common.proto";
import "video_streaming/time_range.proto";

message MediaHeader {
  optional uint32 header_id = 1; 
  optional string video_id = 2;
  optional int32 itag = 3;
  optional uint64 lmt = 4;
  optional string xtags = 5;
  optional int32 start_data_range = 6;
  optional Compression compression = 7;
  optional bool is_init_seg = 8;
  optional int64 sequence_number = 9;
  optional int64 field10 = 10;
  optional int32 start_ms = 11;
  optional int32 duration_ms = 12;
  optional .misc.FormatId format_id = 13;
  optional int64 content_length = 14;
  optional TimeRange time_range = 15; 

  enum Compression {
    VAL0 = 0;
    VAL1 = 1;
    GZIP = 2;
  }

}