syntax = "proto3";
package video_streaming;

message StreamerContext {
  message ClientInfo {
    optional string device_make = 12;
    optional string device_model = 13;
    optional int32 client_name = 16;
    optional string client_version = 17;
    optional string os_name = 18;
    optional string os_version = 19;
  }

  message Fqa {
    optional int32 type = 1;
    optional bytes value = 2;
  }

  message Gqa {
    message Hqa {
      optional int32 code = 1;
      optional string message = 2;
    }

    optional bytes field1 = 1;
    optional Hqa field2 = 2;
  }

  optional ClientInfo client_info = 1;
  optional bytes po_token = 2;
  optional bytes playback_cookie = 3;
  optional bytes gp = 4;
  repeated Fqa field5 = 5;
  repeated int32 field6 = 6;
  optional string field7 = 7;
  optional Gqa field8 = 8;
}