syntax = "proto2";
package video_streaming;

import "misc/common.proto";
import "video_streaming/media_info.proto";
import "video_streaming/time_range.proto";
import "video_streaming/streamer_context.proto";
 
message VideoPlaybackAbrRequest {
  optional MediaInfo media_info = 1;
  repeated .misc.FormatId selected_formats = 2;
  repeated BufferedRange buffered_range = 3;
  optional bytes video_playback_ustreamer_config = 5;
  optional Lo lo = 6;
  repeated .misc.FormatId audio_formats = 16;
  repeated .misc.FormatId video_formats = 17;
  optional StreamerContext streamer_context = 19; 
  optional OQa field21 = 21;
  optional int32 field22 = 22;
  optional int32 field23 = 23;
  repeated Pqa field1000 = 1000;
}

message Lo {
  message Field4 {
    optional int32 field1 = 1;
    optional int32 field2 = 2;
    optional int32 field3 = 3;
  }
  optional .misc.FormatId format_id = 1;
  optional int32 Lj = 2;
  optional int32 sequence_number = 3;
  optional Field4 field4 = 4;
  optional int32 MZ = 5;
}

message Kob {
  message Pa {
    optional string video_id = 1;
    optional uint64 lmt = 2;
  }
  repeated Pa EW = 1;
}

message YPa {
  optional int32 field1 = 1;
  optional int32 field2 = 2;
  optional int32 field3 = 3;
}

message BufferedRange {
  required .misc.FormatId format_id = 1;
  required int64 start_time_ms = 2;
  required int64 duration_ms = 3;
  required int32 start_segment_index = 4;
  required int32 end_segment_index = 5;
  optional TimeRange time_range = 6;
  optional Kob field9 = 9;
  optional YPa field11 = 11;
  optional YPa field12 = 12;
}

message OQa {
  repeated string field1 = 1;
  optional bytes field2 = 2;
  optional string field3 = 3;
  optional int32 field4 = 4;
  optional int32 field5 = 5;
  optional string field6 = 6;
}

message Pqa {
  repeated .misc.FormatId formats = 1;
  repeated BufferedRange ud = 2;
  optional string clip_id = 3;
}